--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 h1 {
-  color: powderblue;
+  color:black;
   text-align: center;
 }
 
@@ -11,7 +11,6 @@ input.thingEntry {
   font-size: 16px;
   text-align: left;
   padding: 12px 28px;
-  border: none;
   border-radius: 4px;
 }
 
@@ -37,6 +36,8 @@ button.delete {
   background-color: red;
 }
 
-li {
+p.para {
   background-color: silver;
+  padding: 12px 28px;
+  font-size: 16px;
 }
